tests/MathML/basic/bad/noChildContent.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mtable><mtr><mtd><mtext>apply</mtext></mtd><mtd><apply></apply></mtd></mtr><mtr><mtd><mtext>reln</mtext></mtd><mtd><reln></reln></mtd></mtr><mtr><mtd><mtext>fn</mtext></mtd><mtd><fn></fn></mtd></mtr><mtr><mtd><mtext>interval</mtext></mtd><mtd><interval></interval></mtd></mtr><mtr><mtd><mtext>condition</mtext></mtd><mtd><condition></condition></mtd></mtr><mtr><mtd><mtext>declare</mtext></mtd><mtd><declare></declare></mtd></mtr><mtr><mtd><mtext>lambda</mtext></mtd><mtd><lambda></lambda></mtd></mtr><mtr><mtd><mtext>domainofapp</mtext></mtd><mtd><domainofapplication></domainofapplication></mtd></mtr><mtr><mtd><mtext>piecewise</mtext></mtd><mtd><piecewise></piecewise></mtd></mtr><mtr><mtd><mtext>piece</mtext></mtd><mtd><piece></piece></mtd></mtr><mtr><mtd><mtext>otherwise</mtext></mtd><mtd><otherwise></otherwise></mtd></mtr><mtr><mtd><mtext>lowlimit</mtext></mtd><mtd><lowlimit></lowlimit></mtd></mtr><mtr><mtd><mtext>uplimit</mtext></mtd><mtd><uplimit></uplimit></mtd></mtr><mtr><mtd><mtext>bvar</mtext></mtd><mtd><bvar></bvar></mtd></mtr><mtr><mtd><mtext>degree</mtext></mtd><mtd><degree></degree></mtd></mtr><mtr><mtd><mtext>set</mtext></mtd><mtd><set></set></mtd></mtr><mtr><mtd><mtext>list</mtext></mtd><mtd><list></list></mtd></mtr><mtr><mtd><mtext>moment</mtext></mtd><mtd><moment></moment></mtd></mtr><mtr><mtd><mtext>momentabout</mtext></mtd><mtd><momentabout></momentabout></mtd></mtr><mtr><mtd><mtext>vector</mtext></mtd><mtd><vector></vector></mtd></mtr><mtr><mtd><mtext>matrix</mtext></mtd><mtd><matrix></matrix></mtd></mtr><mtr><mtd><mtext>matrixrow</mtext></mtd><mtd><matrix><matrixrow></matrixrow></matrix></mtd></mtr><mtr><mtd><mtext>semantics</mtext></mtd><mtd><semantics></semantics></mtd></mtr><mtr><mtd><mtext>annotation</mtext></mtd><mtd><semantics><annotation></annotation></semantics></mtd></mtr></mtable></math>